--- a/content.css
+++ b/content.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth !important;
+}
+
 .content{
     color:rgba(200, 200, 200, 0.75) !important;
     padding-left:1em;
@@ -6,8 +10,8 @@
 
 .content1{
     text-align:center;
-    padding-top:2em;
-    padding-bottom:2em;
+    padding-top:40vh;/*2em;*/
+    padding-bottom:40vh;/*2em;*/
     
     /*background:linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(https://i.pinimg.com/originals/05/fc/64/05fc64de027859a9fb90bc9b270810a9.jpg);
     background-size:1250px;*/
@@ -26,6 +30,21 @@
 
     border-radius:0.25em;
     
+}
+
+
+.content1 img{
+    width:2.5em;
+    transform:translateY(20vh) scaleY(75%);
+
+    transition:all 0.1s ease-out;
+
+    cursor:pointer;
+}
+
+.content1 img:hover{
+    transform : translateY(20vh) scaleY(60%) scale(105%);
+    opacity:50%;
 }
 
 
@@ -52,9 +71,19 @@
 .content3_visible{
     transform:none;
     opacity:100%;
+    animation: fadeIn 0.5s ease-out;
 }
 
-
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform:translateX(20vh);
+    }
+    to {
+        opacity: 1;
+        transform:none;
+    }
+}
 
 
 
