--- a/content.css
+++ b/content.css
@@ -61,7 +61,7 @@ html{
 }
 
 .content1 img:hover{
-    transform : translateY(20vh) scaleY(60%) scale(105%);
+    transform : scaleZ(110%) translateY(20vh);/*translateY(20vh) scaleX(110%);/*scaleY(60%) scale(105%);*/
     opacity:50%;
 }
 
